[gd_scene load_steps=7 format=3 uid="uid://pokqe12mr0kj"]

[ext_resource type="Script" uid="uid://co371wemkh8ms" path="res://scripts/dead_scene.gd" id="1_djra3"]
[ext_resource type="FontFile" uid="uid://dqx0b64ivh6qp" path="res://assets/fonts/Pixelmania.ttf" id="1_gl6pi"]
[ext_resource type="Texture2D" uid="uid://cbcafa6e7ns6p" path="res://assets/sprites/background/SpaceBGGame.png" id="2_sf2tq"]
[ext_resource type="AudioStream" uid="uid://c2xe3hcdsjp8f" path="res://assets/sprites/effects/effectsSounds/gameOver.mp3" id="4_60ukm"]

[sub_resource type="Theme" id="Theme_gl6pi"]
default_font = ExtResource("1_gl6pi")

[sub_resource type="Theme" id="Theme_djra3"]
default_font = ExtResource("1_gl6pi")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_djra3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sf2tq")

[node name="return" type="Button" parent="CanvasLayer"]
offset_left = 154.0
offset_top = 677.0
offset_right = 965.0
offset_bottom = 905.0
theme = SubResource("Theme_gl6pi")
theme_override_font_sizes/font_size = 50
text = "BACK TO MENU"

[node name="return2" type="Button" parent="CanvasLayer"]
offset_left = 1119.0
offset_top = 670.0
offset_right = 1579.0
offset_bottom = 898.0
theme = SubResource("Theme_gl6pi")
theme_override_font_sizes/font_size = 50
text = "RESTART"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -620.5
offset_top = -114.0
offset_right = 620.5
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_djra3")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "YOU DIED"

[node name="deadOST" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_60ukm")

[connection signal="pressed" from="CanvasLayer/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="CanvasLayer/return2" to="." method="_on_return_2_pressed"]
